[package]
name = "qdates"
version = "0.1.0"
authors = ["Sumir Jha <sumirkumarjha@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Mongodb
mongodb = "0.9.2"
bson = "0.14.0"

#Commandline parser
clap = "2.33.0"

#Excel Reader
calamine = "0.16.1"

#JSON
serde_json = "1.0"
serde = "1.0.106"

#Random
rand = "0.7"